# simorg

./: .gitignore  .vercelignore  README.md  debug-python-env.txt  dump_events.py  main_vercel.py  requirements.txt  test_all_combos.py  test_generator.py  vercel.json
backend/: main.py  requirements.txt  supabase_event_repository.py  test_gen.py
backend/api/: index.py
frontend/: .env.local  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
generator/: __init__.py  compiler.py  deterministic_rng.py  exporter.py  industry_templates.py  template_spec.py  verification.py
org_engine_replica/: Cargo.toml  README.md  test_fixtures.json
org_engine_replica/src/: arithmetic.rs  domain.rs  engine.rs  events.rs  graph.rs  hashing.rs  lib.rs  (+4 more)
org_kernel/: __init__.py  constants.py  constraints.py  diagnostics.py  domain_types.py  engine.py  events.py  graph.py  hashing.py  invariants.py  roles.py  snapshot.py  state.py  test_harness.py  test_scenarios.py  test_snapshot.py  transitions.py
org_runtime/: __init__.py  drift.py  event_repository.py  observability.py  schema.sql  session.py  snapshot_repository.py  test_runtime.py
org_runtime_rust/: Cargo.toml
org_runtime_rust/src/: drift.rs  event_store.rs  lib.rs  proto_bridge.rs  proto_types.rs  replay.rs  session.rs  snapshot.rs  snapshot_codec.rs
org_runtime_rust/tests/: integration_test.rs
(+68 files in other folders)
